<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.EditProfileActivity">


    <ImageView
        android:id="@+id/user_iv"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/user_name_tv"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/user_iv"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_iv"
        app:layout_constraintTop_toTopOf="@+id/user_iv"
        android:focusableInTouchMode="true"
        android:hint="@string/user_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:layout_marginTop="56dp"
        android:id="@+id/phone_iv"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/phone"
        app:layout_constraintEnd_toEndOf="@+id/user_iv"
        app:layout_constraintStart_toStartOf="@+id/user_iv"
        app:layout_constraintTop_toBottomOf="@+id/user_iv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:hint="@string/phone"
        android:textColor="@color/colorTypoDark"
        app:layout_constraintBottom_toBottomOf="@+id/phone_iv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/phone_iv"
        app:layout_constraintTop_toTopOf="@+id/phone_iv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="8"
            android:focusableInTouchMode="true"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>



    <ImageView
        android:src="@drawable/gmail"
        android:id="@+id/email_iv"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="@+id/phone_iv"
        app:layout_constraintStart_toStartOf="@+id/phone_iv"
        app:layout_constraintTop_toBottomOf="@+id/phone_iv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:hint="@string/email"
        android:textColor="@color/colorTypoDark"
        app:layout_constraintBottom_toBottomOf="@+id/email_iv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/email_iv"
        app:layout_constraintTop_toTopOf="@+id/email_iv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton

        android:id="@+id/change_pass_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="240dp"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorSecondary"
        android:elevation="4dp"
        android:text="@string/change_pass_button"
        android:textColor="@color/colorBackGround"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.2"
        app:rippleColor="#C0C0C0" />


    <com.google.android.material.textfield.TextInputLayout
        android:visibility="gone"
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:focusableInTouchMode="true"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:visibility="gone"
        android:id="@+id/textInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:focusableInTouchMode="true"
        android:hint="@string/confirm_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_fab"
        android:src="@drawable/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>