<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:windowSoftInputMode="stateUnchanged"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/colorBackGround"
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo_iv"
            android:src="@drawable/logo1"
            android:layout_width="220dp"
            android:layout_height="220dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:max="100"
            android:progress="25"
            android:layout_margin="2dp"
            android:indeterminate="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/scroll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.078" />

        <ScrollView
            android:visibility="visible"
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttons_login_layout"
            app:layout_constraintBottom_toTopOf="@+id/buttons_login_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.9"
            app:layout_constraintVertical_chainStyle="spread">

            <LinearLayout
                android:id="@+id/sign_up_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:visibility="invisible"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="11dp"
                    android:focusableInTouchMode="true"
                    android:hint="@string/user_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:inputType="textPersonName" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="11dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="11dp"
                    android:focusableInTouchMode="true"
                    android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:visibility="invisible"
                    android:layout_marginTop="2dp"
                    android:id="@+id/email_exist_tv"
                    android:layout_marginStart="11dp"
                    android:text="This email already exists"
                    android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/colorSecondary"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="11dp"
                    android:focusableInTouchMode="true"
                    android:hint="@string/phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone"
                        android:maxLength="8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="11dp"
                    android:focusableInTouchMode="true"
                    android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="11dp"
                    android:focusableInTouchMode="true"
                    android:hint="@string/confirm_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttons_login_layout"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/scroll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress"
            app:layout_constraintVertical_bias="0.9">

            <TextView
                android:id="@+id/login_error_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="11dp"
                android:alpha="0.8"
                android:background="@drawable/error_message"
                android:padding="11dp"
                android:textColor="#7f0000"
                android:textSize="21sp"
                android:visibility="invisible" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="11dp"
                android:focusableInTouchMode="true"
                android:hint="@string/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="11dp"
                android:focusableInTouchMode="true"
                android:hint="@string/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons_login_layout"
            android:layout_width="0dp"
            android:visibility="invisible"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center|bottom"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="bottom|end"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"/>
            <ProgressBar
                android:id="@+id/progress_loging"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:max="100"
                android:progress="25"
                android:layout_margin="2dp"
                android:indeterminate="true"
                android:layout_width="match_parent"
                android:layout_height="5dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_weight="0"
                android:background="@color/colorTypo"
                android:visibility="gone" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="21dp"
                android:layout_weight="0" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="240dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorAccent"
                android:elevation="4dp"
                android:text="@string/sign_up_button"
                android:textSize="18sp"
                app:cornerRadius="8dp"
                app:rippleColor="@color/colorAccentDark" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_weight="0" />

            <com.google.android.material.button.MaterialButton

                android:id="@+id/login_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="240dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorBackGround"
                android:elevation="4dp"
                android:text="@string/login_button"
                android:textColor="@color/colorTypoDark"
                android:textSize="18sp"
                app:cornerRadius="8dp"
                app:rippleColor="#C0C0C0" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_weight="0" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>