<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.UserActivity">

    <FrameLayout
        android:visibility="gone"
        android:id="@+id/edit_layout"
        android:background="#fff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout

            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:gravity="center"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/tag"
                android:textColor="@color/colorTypoDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="24dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorAccent"
                android:elevation="4dp"
                android:text="@string/edit"
                android:textColor="@color/colorBackGround"
                android:textSize="18sp"
                app:cornerRadius="8dp"
                app:rippleColor="#C0C0C0" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorSecondary"
                android:elevation="4dp"
                android:text="@string/cancel"
                android:textColor="@color/colorBackGround"
                android:textSize="18sp"
                app:cornerRadius="8dp"
                app:rippleColor="#C0C0C0" />
        </LinearLayout>


    </FrameLayout>

    <ScrollView
        android:visibility="visible"
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <Switch
                android:id="@+id/user_switch"
                android:layout_margin="5dp"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <View
                android:background="@color/colorTypo"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <TextView
                android:textColor="@color/colorTypoDark"
                android:text="User Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:background="@drawable/text_view_style"
                android:id="@+id/email_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:textSize="21sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:textColor="@color/colorTypoDark"
                android:text="User Phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"/>

            <TextView
                android:background="@drawable/text_view_style"
                android:id="@+id/phone_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:textSize="21sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:textColor="@color/colorTypoDark"
                android:text="User Auth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:background="@drawable/text_view_style"
                android:id="@+id/role_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:textSize="21sp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:textColor="@color/colorTypoDark"
                android:text="User RFID Tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"/>
            <TextView
                android:background="@drawable/text_view_style"
                android:id="@+id/serial_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:textSize="21sp" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/phone_call"
        android:src="@drawable/phonecall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>